fix scrollbar issue

--- a/base-react-redux/src/components/Admin/Admin.scss
+++ b/base-react-redux/src/components/Admin/Admin.scss
@@ -14,12 +14,14 @@ $icon-size: 35px;
 
         .admin-header {
             height: 40px !important;
-            // border: 1px solid rgb(0, 255, 8);
+            border: 1px solid gainsboro;
         }
 
-        // .admin-main {
-        //     border: 1px solid red;
-        // }
+        .admin-main {
+            // border: 1px solid red;
+            height: calc(100vh - 50px);
+            margin-bottom: 10px;
+        }
     }
 
     .admin-sidebar {
