--- a/base-react-redux/src/components/Admin/Content/Quiz/ManageQuiz.scss
+++ b/base-react-redux/src/components/Admin/Content/Quiz/ManageQuiz.scss
@@ -1,5 +1,4 @@
 .quiz-container {
-    padding: 15px;
 
     .add-new {
         padding: 15px;
